--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.27.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.5",
     "next": "^11.0.1",
@@ -23,6 +24,7 @@
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.13.2",
     "prettier": "^2.3.2",
+    "prisma": "^2.27.0",
     "typescript": "^4.3.5"
   }
 }
