--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prisma/client": "^2.27.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.5",
+    "nanoid": "^3.1.23",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
